--- a/CityGuide/app/src/main/AndroidManifest.xml
+++ b/CityGuide/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Water"
+            android:exported="false" />
+        <activity
+            android:name=".Pier"
+            android:exported="false" />
+        <activity
+            android:name=".Willis"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
